src/test/deca/codegen/valid/homemade/test/test_complet_printx.deca
{
    float x = 3.25;
    printx("x = ", (x));
}