src/test/deca/codegen/invalid/homemade/test/test_complet_affectation_float_trop_grand_negatif.deca
{
    float x  = -3.48e39;
    println("x = ", (x));
}